tests/specs/ecosystem/radix_ui_fork/react_portal/0_0_8.test
radix-ui-fork/react-portal/0.0.8
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
   */ container?: HTMLElement | null;
                  ~~~~~~~~~~~
    at file://<tmpdir>/src/Portal.tsx:9:19

